2004-09-19  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/stdlib.h: enable and document atof().
	Delete realloc() from the #if 0 part, it's already
	declared and documented anyway.

2004-09-19  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libc/stdio/vfscanf.c: Fix a logical flaw that caused
	characters > 'Z' && < 'a' to be misdetected as valid
	hex digits.  Fix for bug #10420.

2004-09-19  Theodore A. Roth  <troth@openavr.org>

	* include/stdint.h (__HAS_INT32_T__): Define if gcc can supply us with
	a 32 bit integer.
	(__HAS_INT64_T__): Define if gcc can supply us with a 64 bit integer.
	* include/avr/pgmspace.h (prog_int32_t): Use __HAS_INT32_T__ when
	typedef'ing.
	(prog_uint32_t): Ditto.
	(prog_int64_t): Use __HAS_INT64_T__ when typedef'ing.
	(prog_uint64_t): Ditto.

2004-09-19  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.

	* configure.in: Don't generate version.h.
	* reconf: Don't run autoheader.

2004-09-10  Theodore A. Roth  <troth@openavr.org>

	* include/avr/iomx8.h (OCIE0B): Fix value. [Bug #10001]
	(OCIE0A): Ditto.
	(OCIE1B): Ditto.
	(OCIE1A): Ditto.
	(OCIE2B): Ditto.
	(OCIE2A): Ditto.

2004-09-10  Theodore A. Roth  <troth@openavr.org>
[Contributed by Rene Liebscher <R.Liebscher@gmx.de>]

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* include/avr/pgmspace.h (PSTR): Fix to allow PSTR to work with C++.

2004-09-09  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	(CHECK_AVR_DEVICE): Don't supply main() in function block of
	AC_TRY_COMPILE since it is already provided.

2004-08-22  Marek Michalkiewicz  <marekm@amelek.gda.pl>

	* include/string.h (strsep): Remove __ATTR_PURE__, bug #10078.
	(strtok_r): Remove __ATTR_PURE__ too.
	(strncmp): Add __ATTR_PURE__.

2004-08-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/examples/twitest/twitest.c: Make it work on 1 MHz clock.
	* doc/examples/twitest/twitest.dox: Renumber annotations.
